syntax = "proto3";

//declare the package name for this protobuf
package coOrds;

//service for the Model Controller
service ModelController {
    //rpc for the getCoOrdinates function
    rpc getCoOrdinates ( coOrds ) returns ( mapCoOrdinates );
}

//types for the coOrdinates
message coOrdinates{
    
}
message coOrds{
    repeated double data = 1 [packed=true];
}

//for mapped coOrdinates [0,1] 
message mapCoOrdinates{
    repeated double data = 1 [packed=true];
}

