syntax = "proto3";

package model;

service ModelController {
    rpc HandleCoords(RequestDto) returns (ResponseDto) {}
    rpc runPython(RequestDto) returns (ResponsePythonDTO) {}
}



message RequestDto {
    repeated double data = 1;
}

message ResponseDto {
    double sum = 1;
}

message ResponsePythonDTO {
    repeated string data = 1;
}